--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <!-- TODO: Set the document title to the name of your application -->
     <title>Barber Pro</title>
     <meta name="description" content="SaaS de agendamento de um Barbearia" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Gustavo Ramos" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Barber Pro App" />
+    <meta property="og:description" content="A barbearia dos seus sonhos" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="public/baberpro.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+    <meta name="twitter:site" content="@Barberpro" />
+    <meta name="twitter:image" content="./public/baberpro.png" />
 
   <body>
     <div id="root"></div>
